--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ MarkupSafe==3.0.2
 pymongo==4.13.2
 typing_extensions==4.14.0
 Werkzeug==3.1.3
-python-dateutil
+python-dateutil>=2.8.2
+gunicorn==22.0.0
